<resources>
    <string name="app_name">Hoom</string>
    <string name="txt_new_member">New memeber?</string>
    <string name="txt_signup_here">Signup Here</string>
    <string name="txt_login_guest">Login as Guest</string>
    <string name="txt_login">Signin</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_already_member">Already a member?</string>
    <string name="txt_sigin_here">Signin Here</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_name">Name</string>
    <string name="txt_conpassword">Confirm Password</string>
    <string name="txt_address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_select_address">Select your address</string>
    <string name="txt_town">Town</string>
    <string name="txt_zip">Zipcode</string>
    <string name="txt_street">Street</string>
    <string name="txt_house">House No</string>
    <string name="txt_save">Save</string>
    <string name="txt_lawnmove">Lawnmoving</string>
    <string name="txt_plumbing">Plumbing</string>
    <string name="txt_ac">A/C Repairing</string>
    <string name="txt_pick_service">Pick your Service</string>
    <string name="txt_john">John Doe</string>
    <string name="txt_san">San Francisco, CA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="txt_estimated">Estimated cost</string>
    <string name="txt_dollar">400.00</string>
    <string name="txt_place_order">Place Order Now</string>
    <string name="txt_service">Full Service</string>
    <string name="txt_cost">$10</string>
</resources>