<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="95dp"
            android:layout_height="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/kaleko_bold"
            android:letterSpacing="0.025"
            android:text="HOOM"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="305dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:textColor="#C5C5C5"
            android:textSize="11dp" />

        <EditText
            android:id="@+id/Ledit_email"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_vertical|left"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/Ledit_password"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_vertical|left"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="13dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#F1F1F1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Lbtn_signin"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_above="@id/Lbtn_guest"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/txt_login"
            android:textColor="@color/black"
            android:textSize="11dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Lbtn_guest"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_above="@id/Lbtn_signup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/txt_login_guest"
            android:textColor="@color/black"
            android:textSize="11dp" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/Lbtn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/txt_new_member"
            android:textColor="@color/black"
            android:textSize="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/txt_signup_here"
            android:textColor="@color/black"
            android:textSize="11dp" />

    </LinearLayout>

</RelativeLayout>