<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_lawnmoving"
            android:layout_width="305dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.9"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_lawnmove"
                android:textColor="@color/spinner_bg"
                android:textSize="25dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_plumbing"
            android:layout_width="305dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.9"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_plumbing"
                android:textColor="@color/spinner_bg"
                android:textSize="25dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_ac"
            android:layout_width="305dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.9"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_ac"
                android:textColor="@color/spinner_bg"
                android:textSize="25dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>