<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".Fragments.ServicesFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/serviceComp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_lawnmove"
                android:textColor="@color/spinner_bg"
                android:textSize="25dp" />

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/serviceCompRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srb_borderColor="@color/spinner_bg"
                app:srb_fillColor="@color/spinner_bg"
                app:srb_numberOfStars="5"
                app:srb_rating="3"
                app:srb_starSize="16dp"
                app:srb_stepSize="0.1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comp_name"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/txt_estimated"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/services_estimatedCost"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:text="$"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/services_estimatedCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/txt_dollar"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/services_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_placeOrder"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/txt_place_order"
                    android:textColor="@color/black"
                    android:textSize="11dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>