<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hedgehog="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="305dp"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.9"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/comp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/txt_lawnmove"
                android:textColor="@color/spinner_bg"
                android:textSize="25dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comp_name"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/txt_estimated"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/comp_estimatedCost"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:text="$"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/comp_estimatedCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/txt_dollar"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </RelativeLayout>

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srb_borderColor="@color/spinner_bg"
                app:srb_fillColor="@color/spinner_bg"
                app:srb_numberOfStars="5"
                app:srb_rating="3"
                app:srb_starSize="40dp"
                app:srb_stepSize="0.1" />

            <!--            <RatingBar-->
            <!--                android:id="@+id/ratingBar"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:maxHeight="48dp"-->
            <!--                android:minHeight="48dp"-->
            <!--                android:stepSize="0.1"-->
            <!--                android:numStars="5"-->
            <!--                android:progressTint="@color/spinner_bg"-->
            <!--                android:secondaryProgressTint="@color/kprogresshud_grey_color"-->
            <!--                hedgehog:targetApi="lollipop" />-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>